Update types
