# backend/internal/model/performance.go
@@ -4,5 +4,5 @@ import "github.com/Mroxny/slamIt/internal/api"
 
 type Performance struct {
 	Model
-	api.Performance
+	api.Performance `gorm:"embedded"`
 }
